--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<h1>Introduction to Front-end Development</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>3D CSS Transformation</title>
 
-<p>A front-end developer architects and develops client part of websites and applications using web technologies (languages):</p>
+	<link rel="stylesheet" href="index.css">
 
-<ul>
+</head>
 
-<li style="color: red;">HTML</li>
-
-<li style="color: green;">CSS</li>
-
-<li style="color: blue;">JavaScript</li>
-
-</ul>
+<body>
+	<div class="circle"></div>
+         <div class="circle2"></div>
+         <div class="circle3"></div>
+         <div class="circle4"></div>
+</div>
+</body>
+</html>
